# Granular-Material-Packing-Analysis

./: README.md  requirement.txt
Outputs/: chamf_distance_Steel_Deposition_181_176_251_downsampled.mhd  chamf_distance_Steel_Deposition_181_176_251_downsampled_contact_regions.vtp  chamf_distance_Steel_Deposition_181_176_251_downsampled_contacts.vtp  chamf_distance_Steel_Deposition_181_176_251_downsampled_grain_centres.vtp
Python Routines/: bd_extraction.py  compute_pers_diagm_fns.py  convert_store_data.py  crit_point_fns.py  distance_field.py  downsample_skimage.py  main.py  persistence_calculation.py  sitk_mask.py  utilities.py  vtk_cluster_saddle_fns.py
Python Routines/Deprecated Code/: basic_queries.py  bd_extraction.py  chamf_dist.py  check_remove_num.py  cluster_saddles.py  compute_msc_extremum_graph.py  compute_pers_diagm.py  compute_stats.py  compute_stats_nomult_cn.py  downsample_skimage.py  ext_pers_diagm.py  helper_functions.py  helper_functions_2.py  intersect_vectors.py  old_cluster_saddles.py  params_downsample.py  post_process.py  saddle_clustering_fns.py  saddle_max_conn_stats.py  save_crit_points.py  simplify_compute_extremum_graph.py  spheres.py  svd_vecs.py  vtk_cluster_saddles.py
Python Routines/PostProcessing/TrackingAndRelabeling/: ParticleTracking.py  readcsv.py  relab.py
Python Routines/PreProcessing/Convert/: convert_mat_2_raw.py  convert_raw_2_mat.py  downsample_mhd.py
Test Data/: Steel_Deposition_181_176_251_downsampled.mhd
ms complex software/mscomplex-3d/: CMakeLists.txt  Readme.md
ms complex software/mscomplex-3d/cmake/: FindCUDA.cmake  Findtbb.cmake
ms complex software/mscomplex-3d/core/: CMakeLists.txt  aabb.h  config.h.in  grid.cpp  grid.h  grid_dataset.h  grid_dataset_algs.cpp  grid_dataset_base.cpp  grid_dataset_inl.h  grid_dataset_outcore.cpp  grid_mscomplex.h  grid_mscomplex_algs.cpp  grid_mscomplex_base.cpp  grid_mscomplex_inl.h  grid_mscomplex_merge_dag.cpp  grid_mscomplex_outcore.cpp  grid_outcore.cpp  grid_outcore.h  main.cpp  n_vector.h  utl.cpp  utl.h
ms complex software/mscomplex-3d/core/CUDA/: cutil.h  grid_dataset.cu
ms complex software/mscomplex-3d/core/OpenCL/: cl.hpp  grid_dataset.clh  grid_dataset_assigngradient.cl  grid_dataset_cl.cpp  grid_dataset_cl.h  grid_dataset_markandcollect.cl  grid_dataset_ownerextrema.cl
ms complex software/mscomplex-3d/pyms3d/: CMakeLists.txt  Readme.md  main.cpp  pyms3d.cpp
ms complex software/mscomplex-3d/pyms3d/tests/: TestIndexing.py
ms complex software/mscomplex-3d/viewer/: grid_viewer.cpp  grid_viewer.h  grid_viewer_mainwindow.cpp  grid_viewer_mainwindow.h  grid_viewer_mainwindow.ui
ms complex software/mscomplex-3d/viewer/shaders/: cell_shader_geom.glsl
ms complex software/mscomplex-3d/vtk_viewer/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vtk_viewer.cmake
ms complex software/mscomplex-3d/vtk_viewer/icons/: icons.qrc
